<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.yeswanth.aaro_project.MyPlaylist">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <FONTS.TextViewFontStyle
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/myplaylisttext1"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:id="@+id/myframeframe"
            android:src="@drawable/ic_image_1"
            />
        <FONTS.TextViewFontStyle
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/colorBlack"
            android:text="@string/myplaylisttext2"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
        <FONTS.TextViewFontStyle
            android:id="@+id/pairnow_myplaylist"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorBrown"
            android:text="@string/pairnow"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

</LinearLayout>
