<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="com.example.yeswanth.aaro_project.My_Frames_Pairing">

    <include android:id="@+id/pairingtoolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/myframesimage1"
            android:src="@drawable/aaro_logo"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionimage1"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_question"
            android:layout_gravity="center"
            />
        <FONTS.TextViewFontStyle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:text="@string/noframesfound"
            android:layout_gravity="center"
            />
        <FONTS.ButtonFontStyle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:background="@color/colorBrown"
            android:textColor="@color/colorWhite"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_gravity="center"
            android:text="@string/searchagain"
            />
        <FONTS.TextViewFontStyle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="20dp"
            android:textSize="20dp"
            android:background="@null"
            android:text="@string/serialnumber"
            android:textColor="@color/colorBrown"
            android:inputType="text"
            />
        <FONTS.TextViewFontStyle
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:text="@string/pairingtext1"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
