<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <FONTS.TextViewFontStyle
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaindersent"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/aaro_logo" />

        <FONTS.TextViewFontStyle
            android:id="@+id/remainder_sent_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/remaindersent_text1"
            android:textColor="@color/colorBlack"

            android:textSize="16sp" />

        <FONTS.TextViewFontStyle
            android:id="@+id/remainder_sent_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remaindersent_text2"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <FONTS.ButtonFontStyle
            android:id="@+id/con"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorBrown"
            android:text="Continue"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


    </LinearLayout>


</RelativeLayout>