<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/myframesdrawer"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="com.example.yeswanth.aaro_project.My_Frames">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/myframestoolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/myframesimage1"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/aaro_logo" />

                <FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/frameslisted"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/myframeframe"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/layer_1" />

                <FONTS.TextViewFontStyle
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/myframestext2"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <FONTS.ButtonFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorBrown"
                    android:fontFamily="@font/candara"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/buyframe"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <FONTS.TextViewFontStyle
                        android:id="@+id/alreadyframe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="end"
                        android:text="@string/alreadyhave"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <FONTS.TextViewFontStyle
                        android:id="@+id/pairtext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/pairnow"
                        android:textColor="@color/colorBrown"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <fragment
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:name="com.example.yeswanth.aaro_project.SideMenuFragment"
        android:id="@+id/fragment1"
        app:layout="@layout/sidemenu"
        tools:layout="@layout/sidemenu"
        android:layout_gravity="start"/>

</android.support.v4.widget.DrawerLayout>
